--- a/packages/plugins/typescript/oclif/package.json
+++ b/packages/plugins/typescript/oclif/package.json
@@ -9,10 +9,12 @@
     "build": "tsc -m esnext --outDir dist/esnext && tsc -m commonjs --outDir dist/commonjs",
     "test": "jest --no-watchman --config ../../../../jest.config.js"
   },
-  "peerDependenxcies": {
+  "peerDependencies": {
+    "graphql": "^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0",
     "graphql-tag": "^2.0.0"
   },
   "dependencies": {
+    "auto-bind": "4.0.0",
     "@graphql-codegen/plugin-helpers": "1.12.2",
     "@graphql-codegen/visitor-plugin-common": "1.12.2",
     "tslib": "1.10.0"
@@ -20,7 +22,6 @@
   "devDependencies": {
     "@graphql-codegen/testing": "1.12.2",
     "@oclif/command": "^1.5.19",
-    "graphql": "14.6.0",
     "jest": "25.1.0",
     "ts-jest": "25.2.1",
     "typescript": "3.8.2"
