--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "clean": "lerna clean --yes && rm -rf node_modules",
     "build": "lerna run build --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website",
     "test": "lerna run test --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website",
-    "lint": "lerna run lint --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website",
+    "lint": "eslint **/*.ts",
     "test-and-build": "yarn build && yarn test",
     "prerelease": "yarn test-and-build",
     "prerelease:canary": "yarn test-and-build",
@@ -56,6 +56,9 @@
     "apollo-link": "1.2.13",
     "apollo-server": "2.11.0",
     "apollo-utilities": "1.3.3",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
     "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
     "graphql-tools": "4.0.7",
