--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
     "no-empty": "off",
     "no-console": "error",
     "no-prototype-builtins": "off",
+    "no-useless-constructor": "off",
     "@typescript-eslint/no-unused-vars": ["warn", {"args":  "none"}],
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-namespace": "off",
