--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "clean": "lerna clean --yes && rm -rf node_modules",
+    "clean": "rimraf node_modules packages/{*,plugins/*/*,presets/*,utils/*}/node_modules",
+    "prebuild": "rimraf packages/{*,plugins/*/*,presets/*,utils/*}/dist",
     "build": "lerna run build --ignore @graphql-codegen/live-demo --ignore @graphql-codegen/website",
     "test": "jest --no-watchman",
     "coverage": "jest --no-watchman --runInBand --coverage",
