--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "packages/utils/*",
       "packages/plugins/flow/*",
       "packages/plugins/java/*",
+      "packages/plugins/python/*",
       "packages/plugins/typescript/*",
       "packages/plugins/other/*",
       "packages/presets/*",
