--- a/packages/graphql-codegen-core/package.json
+++ b/packages/graphql-codegen-core/package.json
@@ -39,8 +39,8 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.1",
-    "@graphql-toolkit/common": "0.10.1",
-    "@graphql-toolkit/schema-merging": "0.10.1",
+    "@graphql-toolkit/common": "0.10.2-alpha-79b0a63.3+79b0a63",
+    "@graphql-toolkit/schema-merging": "0.10.2-alpha-79b0a63.3+79b0a63",
     "tslib": "1.11.1"
   },
   "main": "dist/index.cjs.js",	
