--- a/packages/plugins/other/schema-ast/package.json
+++ b/packages/plugins/other/schema-ast/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@graphql-codegen/plugin-helpers": "1.13.1",
-    "@graphql-toolkit/common": "0.10.1",
+    "@graphql-toolkit/common": "0.10.2-alpha-79b0a63.3+79b0a63",
     "tslib": "1.11.1"
   },
   "peerDependencies": {
