--- a/packages/plugins/typescript/resolvers/package.json
+++ b/packages/plugins/typescript/resolvers/package.json
@@ -17,7 +17,7 @@
     "@graphql-codegen/plugin-helpers": "1.13.1",
     "@graphql-codegen/typescript": "1.13.1",
     "@graphql-codegen/visitor-plugin-common": "1.13.1",
-    "@graphql-toolkit/common": "0.10.1",
+    "@graphql-toolkit/common": "0.10.2-alpha-79b0a63.3+79b0a63",
     "auto-bind": "4.0.0",
     "tslib": "1.11.1"
   },
